objects/BMCServiceDesk__Change_Request__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpChange</customHelpPage>
    <description>This object allows you to store data for Changes.</description>
    <fields>
        <fullName>BMCServiceDesk__Actual_End_Date__c</fullName>
        <description>This field stores data regarding when the user actually completed the change</description>
        <inlineHelpText>Use this field to select the date when the change request is completed. This field is used to track change requests that were not completed before the Scheduled End date.</inlineHelpText>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Actual_Start_Date__c</fullName>
        <description>This field stores data regarding when the user actually started the change</description>
        <inlineHelpText>Select the date when you start implementing the change request. This field is used to track change requests that were not started on the Scheduled Start date.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Additional_email_information__c</fullName>
        <inlineHelpText>Use this field to add additional information to the email even after selecting the email template.</inlineHelpText>
        <label>Additional email information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate the workflow for sending email to Change Owner. The value is toggled to True if the last value was False to activate field update.</description>
        <label>All Tasks Closed Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the values if the change is approved or not</description>
        <inlineHelpText>Select this field if you want to create a pre-approved change request to ensure quick implementation.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BLANK__c</fullName>
        <description>Use this field to add space between fields in a Console fieldset.</description>
        <label>&lt;BLANK&gt;</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Back_Out_Plan__c</fullName>
        <description>This field stores data regarding the back out plan info</description>
        <inlineHelpText>Use this field to enter the back-out plan for restoring the configuration item to its initial state before the change request was implemented.</inlineHelpText>
        <label>Back-out Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Back_out_Plan_Details__c</fullName>
        <description>This field stores detailed data regarding the back out plan info</description>
        <inlineHelpText>Use this field to enter the detailed back-out plan for restoring the configuration item to its initial state before the change request was implemented.</inlineHelpText>
        <label>Back-out Plan Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category__c</fullName>
        <description>This field stores the category linked to this change</description>
        <formula>BMCServiceDesk__FKCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the change request&apos;s category. Categories allow you to classify the change request using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change_Category__c</fullName>
        <description>This field stores the category of the change</description>
        <label>Change Category</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change_Description__c</fullName>
        <description>This field stores detailed info regarding the change</description>
        <inlineHelpText>Use this field to enter a description of the change request.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change_Flag__c</fullName>
        <formula>TEXT(BMCServiceDesk__Change_Type__c) &amp; &quot; &quot; &amp; IF (ISPICKVAL(BMCServiceDesk__Change_Type__c, &apos;Emergency&apos;), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/flag_red.gif&quot;, &quot;Emergency&quot;), IF (ISPICKVAL(BMCServiceDesk__Change_Type__c, &apos;Standard&apos;), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/flag_green.gif&quot;, &quot;Standard&quot;), IF (ISPICKVAL(BMCServiceDesk__Change_Type__c, &apos;Normal&apos;), IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/flag_yellow.gif&quot;, &quot;Normal&quot;), &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows type of change in a graphical format.</inlineHelpText>
        <label>Change Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change_Type__c</fullName>
        <description>This field stores data regarding type of the change</description>
        <inlineHelpText>From the list of options, select the change type to indicate that the change request is a Standard, Normal and Emergency type of change request.</inlineHelpText>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Change_console_detail_link__c</fullName>
        <description>To be used in Service Cloud Console</description>
        <formula>HYPERLINK(&quot;javascript:var loc = window.parent.location.href; var splittext=loc.split(&apos;/&apos;); var match = /console/.test(splittext[3]); if(match){srcUp(&apos;/apex/BMCServiceDesk__ChangeConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&apos;)}else{ var baseUrl = loc.substring(0,loc.lastIndexOf(&apos;/&apos;)+1);window.parent.location.href = baseUrl + &apos;&quot; &amp; Id &amp;&quot;&apos;}&quot;, Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Request #+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Close_Comments__c</fullName>
        <description>This field stores the data regarding the closed comments</description>
        <inlineHelpText>Use this field to record the reasons for closing the change request.</inlineHelpText>
        <label>Close Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Closed_Date_Time__c</fullName>
        <description>This field stores date and time when the change is closed</description>
        <inlineHelpText>Use this field to select the date when the change request is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
        <label>Closure Category</label>
        <picklist>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn by requester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CollisionDetectionState__c</fullName>
        <label>Collision Detection State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Collision__c</fullName>
        <formula>IF( BMCServiceDesk__CollisionDetectionState__c==&apos;collision&apos;,
HYPERLINK(&quot;javascript:var win = window.open(&apos;/apex/ChangeCollisions?CurrentChangeID=&quot;+Id+&quot;&apos;,&apos;ChangeCollisions&apos;,&apos;status = 1,height = 600, width = 1100,left=150,top=50, resizable = 1,scrollbars=yes&apos;);if(win.focus){win.focus();} &quot;,
IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/status-16-warning-ro.png&quot;, &quot;Collisions detected&quot;),&apos;_self&apos;),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Compliant__c</fullName>
        <description>This field stores the data if the change is compliant or not</description>
        <formula>IF(ISNULL(BMCServiceDesk__Scheduled_End_Date__c), &quot;YES&quot;,
	(IF ( ISNULL(BMCServiceDesk__Actual_End_Date__c) &amp;&amp; ISNULL(BMCServiceDesk__Closed_Date_Time__c),( IF(BMCServiceDesk__Scheduled_End_Date__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF (ISNULL(BMCServiceDesk__Actual_End_Date__c) &amp;&amp; NOT(ISNULL(BMCServiceDesk__Closed_Date_Time__c)), ( IF(BMCServiceDesk__Scheduled_End_Date__c &gt;= BMCServiceDesk__Closed_Date_Time__c, &quot;YES&quot;, &quot;NO&quot;)), 
				(IF(NOT(ISNULL(BMCServiceDesk__Actual_End_Date__c)) &amp;&amp; ISNULL( BMCServiceDesk__Closed_Date_Time__c),(IF(BMCServiceDesk__Scheduled_End_Date__c &gt;= BMCServiceDesk__Actual_End_Date__c, &quot;YES&quot;, &quot;NO&quot;)),
					(IF(BMCServiceDesk__Scheduled_End_Date__c &gt;= BMCServiceDesk__Actual_End_Date__c, &quot;YES&quot;, &quot;NO&quot;))
					)
				) 
			)
		)
	  )
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Dummy_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag toggles if there is a dummy update on Change Request record.</description>
        <label>Workflow Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked category</description>
        <inlineHelpText>From the list of options, select the change request&apos;s category. Categories allow you to classify the change request using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active category.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKClosed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked user who closed the change</description>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked impact</description>
        <inlineHelpText>From the list of options, select the change request&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the change request.</inlineHelpText>
        <label>Impact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active impact.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKInitiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked user who initiated the change</description>
        <inlineHelpText>This field is automatically set to the Initiator ID of the staff member who is creating the change request.</inlineHelpText>
        <label>Initiator ID</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Initiator ID must be active.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked priority</description>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected.</inlineHelpText>
        <label>Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Priority__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active priority</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Priority__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKServiceRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the Service Request to which the Change Request is linked</description>
        <label>Service Request #</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Service_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.BMCServiceDesk__IsStaffUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked status</description>
        <inlineHelpText>From the list of options, select the appropriate status for the change request. Status is used to display the progress of a change request through its stages of opening to closure.</inlineHelpText>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select an active status that applies to change request.</errorMessage>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToChange__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked template</description>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
                <operation>equals</operation>
                <value>Change Request</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__systemTemplate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select active &quot;Template For&quot; change request.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked urgency</description>
        <inlineHelpText>From the list of options, select how quickly the change request needs to be completed. The urgency and the level of impact are used to calculate the priority of the change request.</inlineHelpText>
        <label>Urgency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Urgency__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Select an active urgency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Impact__c</fullName>
        <description>This field stores the impact linked to the change</description>
        <formula>BMCServiceDesk__FKImpact__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the change request&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the change request.</inlineHelpText>
        <label>Impact~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the info if the record is active or inactive</description>
        <inlineHelpText>Select this field if the change request is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Initiator_First_Name__c</fullName>
        <description>This field stores the first name of the user who initiated the change</description>
        <formula>BMCServiceDesk__FKInitiator__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the first name of the staff member who is creating the change request.</inlineHelpText>
        <label>Initiator First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Initiator_ID__c</fullName>
        <description>This field stores the user name who initiated the change</description>
        <formula>BMCServiceDesk__FKInitiator__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Initiator ID of the staff member who is creating the change request.</inlineHelpText>
        <label>Initiator ID~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Initiator_Last_Name__c</fullName>
        <description>This field stores the last name of the user who initiated the change</description>
        <formula>BMCServiceDesk__FKInitiator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the last name of the staff member who is creating the change request.</inlineHelpText>
        <label>Initiator Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Launch_Console__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(window.parent.isServiceCloudConsole){window.parent.addSConsoleTab(&apos;/apex/BMCServiceDesk__ChangeConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;record_name=&quot;&amp; Name &amp;&quot;&amp;isServiceCloudConsole=true&apos;,&apos;&quot;&amp; Name &amp;&quot;&apos; );}else{var loc = window.parent.location.href; if(loc.indexOf(&apos;isRFConsoleDetailForm=true&apos;)!= -1){window.parent.parent.addTab( &apos;&quot; &amp; Id &amp; &quot;&apos;, &apos;&quot; &amp;  Name  &amp; &quot; &apos;,&apos;Change_Request__c&apos;);}else{ var win =window.open(&apos;/apex/BMCServiceDesk__RemedyforceConsole?record_id=&quot; &amp; Id &amp; &quot;&amp;objectName=Change_Request__c&apos;);}}&quot;, Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record will be opened either in Change Request Console or in Remedyforce Console tab</inlineHelpText>
        <label>Launch Console</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LockedRecordTimestamp__c</fullName>
        <description>this field is used in case of record locking.</description>
        <label>LockedRecordTimestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Open_Date_Time__c</fullName>
        <description>This field stores date and time when the change is opened</description>
        <inlineHelpText>This field is automatically set to the date and time at which the change request was created.</inlineHelpText>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Priority__c</fullName>
        <description>This field stores the priority linked to the change</description>
        <formula>BMCServiceDesk__FKPriority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected.</inlineHelpText>
        <label>Priority~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Queue__c</fullName>
        <description>Queue to which the record is assigned.</description>
        <formula>IF(UPPER(LEFT(OwnerId , 3)) =&quot;00G&quot;,BMCServiceDesk__queueName__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reason_for_Change_Details__c</fullName>
        <description>This field stores details for the reason for the change</description>
        <inlineHelpText>Use this field to enter the detailed  reason why you are creating the change request.</inlineHelpText>
        <label>Reason Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reason_for_Change__c</fullName>
        <description>This field stores the reason for the change</description>
        <inlineHelpText>Use this field to enter the reason why you are creating the change request.</inlineHelpText>
        <label>Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Recurrence__c</fullName>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecurringParentRecordId__c</fullName>
        <label>Recurring Parent Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Responded_Date__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the &quot;Actions &gt; Responded&quot; command is run. This field is used to record the date and time when the staff has communicated to the initiator about the change request.</inlineHelpText>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Review_Comments_Details__c</fullName>
        <description>This field stores details for the data regarding the review comments</description>
        <inlineHelpText>Use this field to enter details of  any comments you want to track with the current change request based on your review. These notes might include reasons why the change failed and how the failure might be avoided in the future.</inlineHelpText>
        <label>Review Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Review_Comments__c</fullName>
        <description>This field stores the data regarding the review comments</description>
        <inlineHelpText>Use this field to enter any comments you want to track with the current change request based on your review. These notes might include reasons why the change failed and how the failure might be avoided in the future.</inlineHelpText>
        <label>Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Review_Date__c</fullName>
        <description>This field stores the date and time when the change was reviewed</description>
        <inlineHelpText>Use this field to select the date when the change request is scheduled to be reviewed after the change request is closed.</inlineHelpText>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Roll_Out_Plan_Details__c</fullName>
        <description>This field stores details for the roll out plan regarding the change</description>
        <inlineHelpText>Use this field to enter the details for procedures for implementing the change request.</inlineHelpText>
        <label>Rollout Plan Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Roll_Out_Plan__c</fullName>
        <description>This field stores the roll out plan regarding the change</description>
        <inlineHelpText>Use this field to enter the procedures for implementing the change request.</inlineHelpText>
        <label>Rollout Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scheduled_End_Date__c</fullName>
        <description>This field stores the date and time when the change is scheduled to end</description>
        <inlineHelpText>Use this field to select the date when the change request should be completed.</inlineHelpText>
        <label>Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scheduled_Start_Date__c</fullName>
        <description>This field stores the date and time when the change is scheduled to start</description>
        <inlineHelpText>Use this field to select the date when the change request is scheduled to be implemented.</inlineHelpText>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Staff_ID_Closed_By__c</fullName>
        <description>This field stores the user name who closed the change</description>
        <formula>BMCServiceDesk__FKClosed_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
        <label>Staff ID Closed By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__State__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field stores the state of the change if open or closed</description>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>This field stores the status linked to the change</description>
        <formula>BMCServiceDesk__FKStatus__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the appropriate status for the change request. Status is used to display the progress of a change request through its stages of opening to closure.</inlineHelpText>
        <label>Status~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateAlreadyApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template Already Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TemplateName__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Total_Duration_minutes__c</fullName>
        <description>This field stores the total duration of the change</description>
        <label>Total Duration (minutes)</label>
        <summarizedField>BMCServiceDesk__Change_History__c.BMCServiceDesk__Duration__c</summarizedField>
        <summaryForeignKey>BMCServiceDesk__Change_History__c.BMCServiceDesk__FKChange__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpdateCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field can be used in workflows to increment the count when a new record is added to the Change History.</description>
        <label>Record Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Urgency__c</fullName>
        <description>This field stores the urgency linked to the change</description>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select how quickly the change request needs to be completed. The urgency and the level of impact are used to calculate the priority of the change request.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__queueName__c</fullName>
        <inlineHelpText>Displays the name of the queue to which the change request was last assigned.</inlineHelpText>
        <label>Last Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__shortDescription__c</fullName>
        <inlineHelpText>This field will contain value first 255 character value of description field.</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>